(WIP) Try to fix overflow issue with CI popover

--- a/app/styles/ui/check-runs/_ci-check-run-popover.scss
+++ b/app/styles/ui/check-runs/_ci-check-run-popover.scss
@@ -8,6 +8,11 @@
     }
   }
 
+  .ci-check-run-list-wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+
   .ci-check-run-list-header {
     background-color: var(--box-alt-background-color);
     border-bottom: var(--base-border);
